2008-09-04  Jan Hubicka  <jh@suse.cz>

	* tree-vrp.c (vrp_evaluate_conditional_warnv_with_ops_using_ranges):
	Break out from ...
	(vrp_evaluate_conditional_warnv_with_ops): ... this one.  Add
	using_ranges argument.
	(vrp_evaluate_conditional): Avoid bogus warning for type range.
	(vrp_visit_cond_stmt): Update call of
	vrp_evaluate_conditional_warnv_with_ops

2008-09-04  Jan Hubicka  <jh@suse.cz>

	PR tree-optimization/37345
	PR tree-optimization/37358
	PR tree-optimization/37357
	* tree.c (build_function_type_skip_args): Build distinct type copy;
	set TYPE_CONTEXT.
	(build_function_decl_skip_args): Set type of new decl not orig decl;
	clear DECL_VINDEX for methods turned into functions.

2008-09-04  Nick Clifton  <nickc@redhat.com>

	* configure.ac (HAVE_GAS_LCOMM_WITH_ALIGNMENT): New assembler
	check.
	* configure: Regenerate.
	* config.in: Regenerate.
	* config/i386/bsd.h (ASM_OUTPUT_ALIGNED_LOCAL): Use .lcomm with an
	alignment field, if it is supported.

2008-09-04  Kai Tietz  <kai.tietz@onevision.com>

	* config/i386/t-mingw32 (SHLIB_LC): Change order of import
	libraries.

2008-09-03  David Edelsohn  <edelsohn@gnu.org>

	* config/rs6000/rs6000.c (processor_target_table): Do not
	enable VMX for POWER6.

2008-09-03  Anton Blanchard  <anton@samba.org>

	* config/rs6000/rs6000.c (rs6000_split_lock_test_and_set): Do not
	emit memory barrier before operation.

2008-09-03  John David Anglin  <dave.anglin@nrc.cnrc.gc.ca>

	PR testsuite/37325
	* config/pa/pa64-hpux.h (ASM_OUTPUT_EXTERNAL_REAL): Call
	default_elf_asm_output_external.

2008-09-03  Jeff Law  <law@redhat.com>

	* h8300.c (expand_a_shift): Avoid invalid RTL sharing.

2008-09-03  Richard Henderson  <rth@redhat.com>

	* config/alpha/alpha.c (alpha_split_lock_test_and_set): Move
	memory barrier to below the test-and-set.
	(alpha_split_lock_test_and_set_12): Likewise.

2008-09-03  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-opt/37243

	* ira-int.h (ira_loop_tree_node): Rename mentioned_allocnos to